# NoctaVox

./: CHANGELOG.md  Cargo.toml  flake.nix  install-themes.ps1  install-themes.sh  readme.md  test_db_error.sh  test_db_open.rs
.github/workflows/: release.yml
docs/: CHANGELOG.md  keymaps.md  themes.md
docs/theme_examples/: 3024.toml  Alucard [Light].toml  Ayu Dark.toml  Ayu Mirage.toml  Bumblebee.toml  Catppuccin Latte [Light].toml  Catppuccin Mocha.toml  Cherry Blossom [Light].toml  Dracula.toml  Everforest Dark.toml  Gruvbox [No borders].toml  Kanagawa.toml  Monokai Classic.toml  Monokai Pro.toml  Monokai Vivid.toml  Noctavox Classic.toml  Noctavox Transparent.toml  Nord Mist.toml  Rose Pine.toml  Soft Light.toml  Solarized Dark.toml  Synthwave 84.toml  Tokyo Night.toml
nix/: package.nix
noctavox/: Cargo.toml
noctavox/src/: lib.rs
noctavox_core/: Cargo.toml
scripts/: get-themes.ps1  get-themes.sh
src/: lib.rs  main.rs
src/addons/: mod.rs
src/app_core/: app.rs  key_events.rs  library.rs  mod.rs  playback.rs  player.rs  select.rs
src/conf/: timing.rs  user_config.rs
src/config/: general.rs  icons.rs  mod.rs  timing.rs  user_config.rs
src/database/: mod.rs  queries.rs  snapshot.rs  tables.rs  worker.rs
src/key_handler/: action.rs  key_buffer.rs  keymap_help.rs  mod.rs
src/media_controls/: mod.rs
src/playback/: mod.rs  session.rs  validated_song.rs
src/player/: backend.rs  backend_voxio.rs  core.rs  handle.rs  mod.rs  track.rs
src/theme/: display_theme.rs  gradients.rs  mod.rs  parsed.rs  theme_config.rs  theme_manager.rs
src/tui/: layout_minimal.rs  layout_traditional.rs  mod.rs  renderer.rs
tests/: test_database_error_handling.rs
voxio/: Cargo.toml
(+85 files in other folders)
