[package]
name = "noctavox"
version = "0.3.1"
edition = "2024"
rust-version = "1.95"
authors = ["Jaxx497"]
description = "A lightweight TUI music player for local files"
license = "MIT"
repository = "https://github.com/Jaxx497/NoctaVox/"
keywords = ["tui", "music", "audio", "player", "terminal"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
indexmap = "2.14.0"
nohash-hasher = "0.2.0"
rand = "0.10.1"
ratatui = { version = "0.30.2" }
ratatui-textarea = "0.9.1"
rayon = "1.12.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"]}
spectrum-analyzer = "1.7.0"
symphonia = {version = "0.6.0", features = ["aac", "aiff", "alac", "mp3", "isomp4"]}
toml = "1.0.3"
walkdir = "2.5.0"
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
voxio = { version = "0.2.1", features = ["waveform"] }
souvlaki = "0.7"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "vox"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1

[profile.quick]
inherits = "dev"
opt-level = 0
codegen-units = 256

[profile.audio-test]
inherits = "release"
opt-level = 3
lto = false
debug = true
codegen-units = 16

